@@ -1,8 +1,12 @@
 package org.epam.utils.mappers;
 
+import org.epam.models.dto.AuthResponseDto;
 import org.epam.models.dto.TraineeDto;
+import org.epam.models.dto.TrainerDto;
+import org.epam.models.dto.UserDto;
 import org.epam.models.entity.Trainee;
 import org.epam.models.entity.Training;
+import org.epam.models.entity.User;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.Named;
@@ -10,21 +14,44 @@ import org.mapstruct.factory.Mappers;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
-
 
 @Mapper(uses = {UserMapper.class})
 public interface TraineeMapper {
     TraineeMapper INSTANCE = Mappers.getMapper(TraineeMapper.class);
 
-    @Mapping(target = "trainingsIds", source = "trainings", qualifiedByName = "toTrainingIds")
+    @Mapping(target = "user.password", ignore = true)
+    @Mapping(source = "user", target = "user")
+    @Mapping(source = "trainings", target = "trainers", qualifiedByName = "mapTrainersForTrainee")
     TraineeDto toDto(Trainee trainee);
 
-    @Named("toTrainingIds")
-    default List<String> toTrainingIds(List<Training> trainings) {
-        if (trainings == null) return Collections.emptyList();
+    @Named("mapTrainersForTrainee")
+    default List<TrainerDto> mapTrainersForTrainee(List<Training> trainings) {
+        if (trainings == null) {
+            return Collections.emptyList();
+        }
+
         return trainings.stream()
-                .map(Training::getId)
-                .collect(Collectors.toList());
+                .map(Training::getTrainer)
+                .distinct()
+                .map(trainer -> new TrainerDto(trainer.getId(),
+                        createUserDto(trainer.getUser()),
+                        trainer.getSpecialization().getTrainingTypeName().getVal(),
+                        null)
+                ).toList();
     }
+
+    default UserDto createUserDto(User user) {
+        return new UserDto(
+                user.getId(),
+                user.getUsername(),
+                user.getFirstName(),
+                user.getLastName(),
+                user.getIsActive(),
+                null
+        );
+    }
+
+    @Mapping(target = "username", expression = "java(trainee.getUser().getUsername())")
+    @Mapping(target = "password", expression = "java(trainee.getUser().getPassword())")
+    AuthResponseDto toAuthResponseDto(Trainee trainee);
 }
